# inventory-po-app

./: .gitignore  CHANGELOG.md  README.md  design_doc.md  inventory_po.db  project_description.md  test_core_functionality.py  test_proposal.md
backend/: .env.example  .gitignore  requirements.txt  run.py
backend/app/: database.py  image_similarity.py  importers.py  main.py  models.py  schemas.py  storage.py
backend/scripts/: import_scraped_catalog.py
backend/tests/: image_similarity_cli.py  test_pdf_product_ids.py
frontend/: package-lock.json
frontend/src/: App.css  App.jsx  api.js  index.css
frontend/src/components/: NavBar.jsx  ProductCard.css  ProductCard.jsx
frontend/src/contexts/: CartContext.jsx
frontend/src/pages/: Cart.jsx  Import.jsx  ProductDetail.jsx  ProductList.css  ProductList.jsx
scraper/: SCRAPER_CHANGELOG.md  SCRAPER_DESIGN.md  SCRAPER_PLAN.md  SCRAPER_README.md  SCRAPER_TEST_PROPOSAL.md  pyproject.toml  requirements.txt
scraper/data/: catalog.json  site_map.json
scraper/src/es_scraper/: __init__.py  browser.py  catalog.py  cli.py  downloader.py  navigation.py  product_page.py  product_scraper.py  sitemap.py
scraper/tests/: test_navigation_parser.py  test_product_parser.py
scraper/tests/fixtures/: homepage.html  product_page.html
