[project]
name = "es-houseware-scraper"
version = "0.1.0"
description = "Internal scraper for eshouseware.com"
readme = "SCRAPER_README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.12",
    "pydantic>=2.5",
    "requests>=2.31",
    "typer>=0.12",
    "playwright>=1.57",
    "tqdm>=4.66",
]
authors = [{name = "Inventory PO Team"}]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
